@@ -654,6 +654,7 @@ l_ibank_conspl                            = "Consolidate Credits to a single pla
 l_ibank_notenturns                        = "You do not have enough turns to perform this operation";
 
 [index]
+l_bnt                                   = "Blacknova Traders";
 l_welcome_bnt                           = "Bienvenue sur Traders BlackNova (BNT)!";
 l_bnt_description                       = "BNT est basé sur le web massivement multijoueur de combat spatial jeu de négociation et inspiré par les jeux BBS populaires de TradeWars et Ultimate Universe.";
 l_cookie_warning                        = "Traders BlackNova requiert des cookies pour l'authentification Le jeu ne fonctionnera pas sans eux En vous inscrivant ou en se connectant en vous vous engagez à nous créer des cookies...";
