@@ -653,6 +653,7 @@ l_ibank_conspl                            = "Konsolidiere Credits f&uuml;r einen
 l_ibank_notenturns                        = "Sie haben nicht genug z&uuml;ge, um diese Operation auszuf&uuml;hren.";
 
 [index]
+l_bnt                                   = "Blacknova Traders";
 l_welcome_bnt                           = "Willkommen bei Blacknova Traders (BNT)!";
 l_bnt_description                       = "BNT ist eine web-basierte Massively Multiplayer Weltraumschlachten und Handel Spiel durch den populären BBS Spiele TradeWars und Ultimate Universe inspiriert.";
 l_cookie_warning                        = "Blacknova Traders erfordert Cookies für die Authentifizierung Das Spiel wird ohne sie nicht arbeiten Mit der Anmeldung oder der Anmeldung erklären Sie sich mit uns setzen Cookies...";
