@@ -653,6 +653,7 @@ l_ibank_conspl                          = "Consolidar los Créditos a un solo pl
 l_ibank_notenturns                      = "No tiene suficientes turnos para realizar esta operación";
 
 [index]
+l_bnt                                   = "Blacknova Traders";
 l_welcome_bnt                           = "Bienvenido a los comerciantes Blacknova (BNT)!";
 l_bnt_description                       = "BNT es una web basada en el combate espacial masivamente multijugador y juego comercial inspirado en los juegos populares de BBS TradeWars y el Ultimate Universe.";
 l_cookie_warning                        = "Blacknova Traders requiere que las cookies de autenticación El juego no funcionará sin ellos Al registrarse o iniciar sesión en la que están de acuerdo para hacernos cookies...";
