@@ -1,3 +1,7 @@
+TheKabal (15 November 2013)
+--------------------------------------
+Change the new player page template to better match the style of index.
+
 TheKabal (13 November 2013)
 --------------------------------------
 Update to move the loading of adodb's session2 out of global_includes, and into the classmap composer config. Also updating using php composer.phar update -o from now on.
